--- a/src/comp/navbar.css
+++ b/src/comp/navbar.css
@@ -14,7 +14,7 @@
 
 .nav-logo > h1 {
     font-size: 28px;
-    font-family: "mark_proregular";
+    font-family: "heavy-f";
     font-weight: 800;
     padding-left: 0.5rem;
     padding-top: .5rem;
@@ -29,7 +29,7 @@
     list-style: none;
     display: flex;
     font-size: 19px;
-    font-family: "mark_proregular";
+    font-family: "reg-f";
     font-weight: bold;
 }
 
@@ -115,7 +115,7 @@
   color: #fff;
   cursor: pointer;
   display: inline-flex;
-  font-family: "mark_proregular";
+  font-family: "bold-f";
   font-weight: 550;
   height: 48px;
   justify-content: center;
