--- a/src/App.css
+++ b/src/App.css
@@ -47,11 +47,14 @@
     font-style: normal;
 
 }
-  
+
 .App {
     height: 100vh;
     background-image: url("./images/bg-image.png");
     background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
 }
 
 .App-header {
