--- a/src/comp/content.css
+++ b/src/comp/content.css
@@ -1,11 +1,12 @@
 .main-main-div{
     display: flex;
     margin: 0;
+    margin-top: 1rem;
     /* justify-content: center; */
 }
 
 .line-div {
-    height: 31em;
+    height: 30em;
     border-radius: 100px;
     position: relative;
     left: 4.8em;
@@ -93,8 +94,8 @@
 
 .icons-div {
     display: flex;
-    gap: 1.2em;
-    padding-top: 1.2em;
+    gap: 1.3em;
+    padding-top: 2.8em;
 }
 
 .qr-span {
