--- a/src/main-comp/navbar.css
+++ b/src/main-comp/navbar.css
@@ -151,3 +151,8 @@
   box-shadow: rgba(45, 35, 66, .4) 0 3px 7px inset;
   transform: translateY(2px);
 }
+
+.nav-btn > a {
+  text-decoration: none;
+  color: white;
+}
