--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,73 @@
-.App {
-    height: 100vh;
-    background-image: url("./images/bg-image.png");
-    background-size: cover;
+@font-face {
+  font-family: 'Black-f';
+  src: url('./fonts/fontfont_ff.mark.pro.black-webfont.woff2') format('woff2'),
+      url('./fonts/fontfont_ff.mark.pro.black-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
+
+@font-face {
+  font-family: 'med-f';
+  src: url('./fonts/fontfont_ff.mark.pro.medium-webfont.woff2') format('woff2'),
+          url('./fonts/fontfont_ff.mark.pro.medium-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'bold-f';
+  src: url('./fonts/fontfont_ff.mark.pro.bold-webfont.woff2') format('woff2'),
+          url('./fonts/fontfont_ff.mark.pro.bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'heavy-f';
+  src: url('./fonts/fontfont_ff.mark.pro.heavy-webfont.woff2') format('woff2'),
+          url('./fonts/fontfont_ff.mark.pro.heavy-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'mark_probold';
+  src: url('./fonts/mark_pro_bold-webfont.woff2') format('woff2'),
+          url('./fonts/mark_pro_bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'reg-f';
+  src: url('./fonts/fontfont_ff.mark.pro-webfont.woff2') format('woff2'),
+       url('./fonts/fontfont_ff.mark.pro-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+.App {
+  text-align: center;
+  background-image: url("./images/bg-image.png");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
+.container {
+  position: relative;
+  margin-left: 65px;
+  margin-right: 65px;
+  margin-bottom: 25px;
+  width: 92%;
+  min-height: 98%;
+  background: rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(35px);
+
+
+}
+
+
