--- a/src/component/content.css
+++ b/src/component/content.css
@@ -48,3 +48,19 @@
 }
 
 
+
+.container {
+    position: relative;
+    margin-left: 65px;
+    margin-right: 65px;
+    margin-bottom: 25px;
+    width: 92%;
+    min-height: 98%;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(35px);
+  
+  
+  }
+  
+  
+  
