--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 }
 
 @font-face {
-    font-family: 'mark_probold';
+    font-family: 'bold-f-2';
     src: url('./fonts/mark_pro_bold-webfont.woff2') format('woff2'),
             url('./fonts/mark_pro_bold-webfont.woff') format('woff');
     font-weight: normal;
