--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("../src/images/bg-image.png");
+  width: 100%;
+    height: 100vh;
+    /* background-image: url("../images/bg-image.png"); */
+    background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+
 }
 
 code {
