--- a/src/main-comp/home.css
+++ b/src/main-comp/home.css
@@ -1,11 +1,12 @@
-.Home-App {
+/* .Home-App {
+    width: 100%;
     height: 100vh;
     background-image: url("../images/bg-image.png");
     background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-}
+} */
 
 .Home-App-header {
     display: flex;
